support for local authorization server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,12 @@ spring.security.oauth2.client.provider.mocklab.user-info-uri=https://oauth.mockl
 spring.security.oauth2.client.provider.mocklab.jwk-set-uri=https://oauth.mocklab.io/.well-known/jwks.json
 spring.security.oauth2.client.provider.mocklab.user-name-attribute=sub
 
+spring.security.oauth2.client.provider.local.authorization-uri=http://local-auth:8081/oauth2/authorize
+spring.security.oauth2.client.provider.local.tokenUri=http://local-auth:8081/oauth2/token
+spring.security.oauth2.client.provider.local.user-info-uri=http://local-auth:8081/oauth2/userinfo
+spring.security.oauth2.client.provider.local.jwk-set-uri=http://local-auth:8081/oauth2/jwks
+spring.security.oauth2.client.provider.local.user-name-attribute=sub
+
 #client configuration
 spring.security.oauth2.client.registration.mocklab.clientId=mocklab_oidc
 spring.security.oauth2.client.registration.mocklab.clientSecret=unused
@@ -16,7 +22,8 @@ spring.security.oauth2.client.registration.mocklab.redirectUri={baseUrl}/login/o
 spring.security.oauth2.client.registration.mocklab.scope = openid,email,read
 spring.security.oauth2.client.registration.mocklab.authorization-grant-type=authorization_code
 
-# default user
-spring.security.user.name=admin
-spring.security.user.password=admin
-spring.security.user.roles=admin
+spring.security.oauth2.client.registration.local.clientId=local
+spring.security.oauth2.client.registration.local.clientSecret=local
+spring.security.oauth2.client.registration.local.redirectUri={baseUrl}/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.local.scope = openid,read
+spring.security.oauth2.client.registration.local.authorization-grant-type=authorization_code
